--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 <body>
     <div id="calculator">
         <div id="screen">
-            <h4 id="display2"></h4>
-            <h4 id="operator"></h4>
-            <h3 id="display1"></h3>
+            <div>
+                <div>
+                    <h2 id="display2"></h2>
+                    <h2 id="operator"></h2>
+                </div>
+                <div>
+                </div>
+            </div>
+            <div>
+                <h1 id="display1"></h1>
+            </div>
         </div>
-        <div>
+        <div id="operation">
             <button value="">Clear</button>
             <button value="">Delete</button>
         </div>
