add clear & delete feature

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 </div>
             </div>
             <div>
-                <h1 id="display1"></h1>
+                <h1 id="display1">0</h1>
             </div>
         </div>
         <div id="operation">
-            <button value="">Clear</button>
-            <button value="">Delete</button>
+            <button onclick="clearScreen()">Clear</button>
+            <button onclick="deleteNumber()">Delete</button>
         </div>
         <div id="buttons">
             <button value="8">8</button>
